RESOLVED FIXED 152990
Modern IDB: storage/indexeddb/index-multientry.html fails under GuardMalloc/ASAN
https://bugs.webkit.org/show_bug.cgi?id=152990
Summary Modern IDB: storage/indexeddb/index-multientry.html fails under GuardMalloc/ASAN
Brady Eidson
Reported 2016-01-11 15:25:41 PST
Modern IDB: storage/indexeddb/index-multientry.html fails under GuardMalloc/ASAN
Attachments
Patch v1 (4.34 KB, patch)
2016-01-11 15:38 PST, Brady Eidson
achristensen: review+
Brady Eidson
Comment 1 2016-01-11 15:38:15 PST
Created attachment 268718 [details] Patch v1
Alex Christensen
Comment 2 2016-01-11 15:42:35 PST
Comment on attachment 268718 [details] Patch v1 r=me
Brady Eidson
Comment 3 2016-01-11 15:44:39 PST
David Kilzer (:ddkilzer)
Comment 4 2016-02-04 20:58:49 PST
Note You need to log in before you can comment on or make changes to this bug.