Modern IDB: storage/indexeddb/index-multientry.html fails under GuardMalloc/ASAN. https://bugs.webkit.org/show_bug.cgi?id=152990

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (Covered by re-enabling existing test).

* Modules/indexeddb/client/IDBRequestImpl.cpp:
(WebCore::IDBClient::IDBRequest::dispatchEvent): Use String::utf8() instead of AtomicString::characters8() for
  the format string, as the latter fails under ASAN.

* Modules/indexeddb/server/IndexValueStore.cpp:
(WebCore::IDBServer::IndexValueStore::removeEntriesWithValueKey): We can't save off pointers to IDBKeyDatas
  used as keys in the map, because the moment we start mutating the map the keys can be rehashed, invalidating
  our pointers. Save off the IDBKeyDatas by value instead.

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/171078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194872 268f45cc-cd09-0410-ab3c-d52691b4dbfc